--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 
   <!-- Header -->
   <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-    <img class="w3-image" src="/img/ME.jpg" alt="Me" width="500" height="500">
+    <img class="w3-image" src="./img/ME.jpg" alt="Me" width="500" height="500">
     <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
       <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Kristoff Peet</h1>
       <h5 class="w3-hide-large" style="white-space:nowrap">Kristoff Peet</h5>
@@ -38,7 +38,7 @@
     <!-- Images (Portfolio) -->
     <!-- <img src="/img/Dub.jpg" alt="Ocean" class="w3-image" width="1000" height="500"> -->
     <div a href="https://madison-coding-club-g00gol.c9users.io/html/blog.html"> Madison Coding Club.</div>
-    <img src="/img/ivy.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
+    <img src="./img/ivy.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
 
     <!-- <img src="/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
